edusweep: Use monochrome logo

--- a/EduSweep 2/Forms/FormMain.resx
+++ b/EduSweep 2/Forms/FormMain.resx
@@ -238,16 +238,16 @@
   <data name="toolStripButtonDonate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIRSURBVDhPzVJNi1JhFL6Bm6iNP2D+wuyi2gyCxGyjdRT9
-        gWhRNNt2M7NpBsGZjSUoLWTCHCIk1Osnoo5exW/x6/qF31ouBL3e0zmna21qVi068HCv1+d5znmf8wr/
-        V5VKpd1yuWwrFAqMbDb7SYMtk8nY0um0LZlM7mr034WiPRTL9XodxuMxTCYTxnQ65edoNGIMBgPI5/MQ
-        jUblWCy2x2IUGl0ulzqbzWDUbcHVZweI707AdfgaPr55zrg8OgDx/Skkv1wgpw3D4RCsVqsaiUSMQrFY
-        lEi8Xq+Z+PbhnWtxeXwAi8WCTdBAEhKJxHev1wuqqoKCJl/Pj8D+8imYHxvh9NE9xtmTB/Dh1TP+ryrF
-        YT6f85FEUfwm2O32Tr/fh+VyCYqi8HO1WjFosj+hUqlArVYjg5pgMpkcoBWNhukDGW6DI9C49E2WZYjH
-        4yzG7MjgRDAYDPuanom5XA6q1So0m01oNBpAm6GOlH4qlYJwOAytVguCwSAZ3Bb0ev19ElN3EpOo3W4z
-        iTrSbzKkjngX+Huv1wOfzzfhNep0urvYQdpsNjwuCbrdLnQ6HQYJtlPQOx0FNwcej+cFG2DdJBOn01kg
-        kiRJTCJsjWgS6koXizLCrYma9lfdQNzy+/0XFotFpY60qu0tpGzI3Gw2qyh2/JT8pTDlHQxKCYVCEAgE
-        KCgGnllxu907Gu1flSD8AL5+T6RGSkjTAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIRSURBVDhPzVI7jxJhFB0TGqMNP2D/wnZGbTYkxGxrrI3G
+        P2AsNG5rt7uNuyHsWhApIBZkDbgxhhhgeIYACwPhTXgNr/AGpSCBYa73XgdtdCsLb3Iyw3DOufc79xP+
+        ryqVSrvlctlWKBQY2WzWpcGWyWRs6XTalkwmdzX670LRHorler0O4/EYJpMJYzqd8nM0GjEGgwHk83mI
+        RqNyLBbbYzEKjS6XS53NZjDqtuDqswPE9yfw6fA1fHzznHF5dACi9RSSXy6Q04bhcAhWq1WNRCJGoVgs
+        SiRer9dMfPvwzrW4PD6AxWLBJmggCYlE4rvX6wVVVUFBk6/vjsD+8imcPTbC6aN7jPMnD+DDq2f8X1WK
+        w3w+5yOJovhNsNvtnX6/D8vlEhRF4edqtWLQZH9CpVKBWq1GBjXBZDI5QCsaDdMHMtwGR6Bx6ZssyxCP
+        x1mM2ZHBiWAwGPY1PRNzuRxUq1VoNpvQaDSANkMdKf1UKgXhcBharRYEg0EyuC3o9fr7JKbuJCZRu91m
+        EnWk32RIHfEu8Pderwc+n2/Ca9TpdHexg7TZbHhcEnS7Xeh0OgwSbKegdzoKbg48Hs8LNsC6SSZOp7NA
+        JEmSmETYGtEk1JUuFmWEWxM17a+6gbjl9/svLBaLSh1pVdtbSNmQudlsVlHs+Cn5S2HKOxiUEgqFIBAI
+        UFAMPLPidrt3NNq/KkH4AakkT5gThu0EAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="statusStripWorkingDirectory.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -500,83 +500,70 @@
   </data>
   <data name="pictureBoxHeader.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAr4AAAAoCAYAAAAYJ/kCAAAABGdBTUEAALGPC/xhBQAAEcNJREFUeF7t
-        nXmYlWUZxl9BEU0GFIWSRHIWmMHc94V1QBATkC3RXDFRM/c9VkUNRSEBZZhBU8zCTKjA0gSSLWVIRUVT
-        K02zXPCgoiRKp/s+fM/48PGdgww0x9H7d12/a+a87/edOXM4f9zz8LzvG4QQQgghhBBCCCGEEBFTnui+
-        pQ6Bh098/Jjwtz8fHNJPloX0U2VnwTLI72tvOi2/hAohhBBC5IVYiN1cS+BH8OJY8F0MF8IGNSG2NiaE
-        Jln/FUIIIYTICy7E1sZfwzSc4YLvrgitK2EanlQTYmtjQmiS9V8hhBBCiLzgQuzm2gky9NJXEHx3iIJv
-        V4RWhl76KizIhNjamBCaZP1XCCGEECIvRCG2Ns6AFnw/QfBtGwXfixBaLfjSwZkQWxsTQpOs/wohhBBC
-        5IUoxG6ubSB7ey34phF8O0XBdyxCqw++f4DbwORwm8uE0CTrv0IIIYQQeQGhtTYOgjWhlyL49oiC73iE
-        Vh9834MtYXK4zWVCaJL1XyGEEEKIvIDQWhsvg/Hg2zkKvjcjtPrg+1+4H0wOt7lMCE2y/iuEEEIIkRcQ
-        WmvjCOiD78cIvkVR8D0fodUHX3ooTA63uUwITbL+K4QQQgiRFxBaa+Ml0AffagTfhlHw/TZC66fQQi8r
-        vvvA5HCby4TQJOu/QgghhBB5AaHVbAjbwaFwMpwJ50U+CG+Fx8EGsAv0wfdCBF/bx5cL2eZCC75vwu3g
-        bpAnuk2Fs+F8+Aj8BbwJ9ofsBf5sIVxCaCrcs82P4Hg4OYcHQV77ef01nBYb21Ibw1PhdLgAPg7nwClw
-        IGwOk+770iuEEEIIkRemLs2E3m3hzS7I5nIx5OK2Z6PHy2EzF3wZWjtAVnoZfCvgD+Hr0eNcroK9YEg/
-        0y5b8P0AfgpfgH9J8EX4HbhR4MrhcvhwbGxLbAOXwHQOX4c9YNL9X2qFEEIIIfLCxCU9wp3V5QzA30SA
-        vT0Ks5tyDXwDvgLbwxALvtR6fV+Mvm7Kd+C56WdLG6efLw2f/rFNtuD7HmQVdaNAtQVWw9mxsdraCD4G
-        LeDOgufBM+E18Pfwfci5o2HSc3ypFUIIIYTIC/vfNSCcO6t3mIQAfNey8lBV3a1rxdLuv0eYTQq8XrZA
-        FMNMq0RC8KVsX3gDJgVdc3V6edlt6efLCmFYN7csfHhdaVjVs6i+Bt8O0ELvDdFY3EJ4Imzgxr4yCiGE
-        EELkh4pBIUwZlAnApzxwQrj20V6Z9oc7q8s7IQTfiFDL1gZWd1fCF+G9sD9kr29Nj3CW4EvZt3sBZD/v
-        a3Al/DvC7uz0irILEXbbpp9oH9beWxZWX9MurOpTElJHwQ45g++9Pkhtps3grrGxZXBrBd/LIUPvWrhX
-        NJZvvw73hLu4sc/jbpBtG/yaNJ/LbeA3IxtGYxmFEEIIIfJC08pBjWBNAG48dVDoPL1/GPJg33D93JoQ
-        XFC5tPsuCLjb+7DrzRF8P/PpsibpFaW7pF8o2zFd3T58MqMsfDiqNLz3vbYh1RF2QODtXhJW9czYaCsH
-        3yGQC8zYI7wGPgevhzvBxZALz/z1XHz2KOzpxuJeBitjYxdCBl/2IR8ajW1KBvEH4e9gUt/vMMge5O+6
-        MZOL/R6Bl7gx8yzItovV8BP4NmTAZ7U5fq13AGRLRgryvlWQ7wUX6yVdfzzk6/sJ3B7+ALKKzp/L9/sp
-        yDaPHWD0yRNCCCGEqGMQei+F1fBheD+C70SE4PMRgvdnCO6CEHz2zD7hlgXHWitEqFi/IO7zB9/l8Hn4
-        XPuwdlb78NEYhN1TEXQ7l+yUOrqkW6q8ZDiCbhWcBefBx+HhWzH4chcIhtFfwNNhf3gx5KK2pZAL5diL
-        6+9hpZL3DHVjce+DL8XGuKME76ML4e7QzyfJvuB/QN7DHSb8XAF8B3JubjRmbgdfhZxjpdnGWWH9KbTX
-        8RF8wz2mt0D/XJRVWu46Ydcw9PI+frWxu+C20N93BeTca/C30fdJMkzvGH30hBBCCCHqFoTdFvApmI65
-        DsF3IULw2QjBDYqmDcy0QoyZ2ysTfKdVl2cWxa2XYbhreP3ZkpB+oRQi5P4F8usKuBSBd3pZWH1Zu0xF
-        F2F3d4TdcQi3L8N0gj9O9SjeJkvw5cIwhjofvHJpPbeszsbnGBDvgZxnKPZzreB/IRel+XEvQyDDsx9j
-        3+7PoIU9BtMfwnh7RdwKyOsZpBlobfwAaM/FcLwjtLn2kC0VfJ17R2OUYd3uGQvZ5sDK9n7wV9Dm4rtf
-        nARt7k7YFvI+fmVl2+ZY0fX3XQRtjjK887lZ8Wb12C/2uzz66AkhhBBC1C0IuPTrMCn8mg83nDqotbVC
-        dJzeP5x4f79w1sy+4fsZe4fBD5wR7qkcFtaMKwlrxpeGNRNKw0djS8Pqq9utb2XoxHYGhN4eJcch2L4a
-        C7reCRDhuHCj0BsFX1Y/GaR6w74xT4DsSfWhbCrkPfEqpdkUsoo8043R2gZf2gTOgD4Msho6BsZfn3ky
-        5HUfw7JojPpQuQ4eBm2OrQcc5zZu3DeYY/w92bPM8QeiMS+D+ROQ8wzBNs5qLyvUHGcV3N9jzoOc5/P7
-        99O/xrujMS/fj+ch55+KPnpCCCGEEHULQq3ZGrLlISn40mVwVwZf6weusaJfCJOuCudcPj2kDisOqaNo
-        prK7PuyW1/TtdoZrYFLgpZMhwjHu75J1cRsDJKuc7D9l76mXAZatDD508b/X/xQbi/skjC9u25Lga54C
-        V0ALhfRdeDXcYMEXLILsPeY1rLza+P3R2F+jr7714o5ozB++wRaND2H8eby2AO9laIGZ4dTaIa6MxuKy
-        PYTzfH7+HBu34MuWCB/aveMgr3kj+ugJIYQQQtQtCLPeneF9MCn40jth/J5QMO340PS2G8MBI+aHF07s
-        FFLdiizoepvBf8CkwLsaXgoz17LaO/+0jtmCLwMuwyB7X1mt9XLHBvbL+sDFhV8Mv34sLiuc/4/gS9ma
-        cAb8M2TwM38JuRDMrmMlls/FOYZEjn0N/hMykE6AnGMbBedYobXrWS225ymGrBpzPNsBGfzjgPNvQdvp
-        gTs3MJRzPNvvzEVxnP8PZFC3cQu+/MOjZTQWdwTkNW9GHz0hhBBCiLolKcjCk+ESGA++H8MDYM21BZUD
-        Yf/wrRt/GcLoxaHi4hEh1akwHnrpMBgPvB/CGfBAmLkuU+3tVBTO639stuDLcMW+3HiwyiZ3G9jUqWxJ
-        +/hureBrsm+XAZgVawZAOhL6ayZBjnP3CT7exz3uHH3PnRkYiLlojpVXVln9tmm+cszWhZ9D9i+bXJBn
-        IZwtID74roQcZysDr4vfxz8QOM+KO/citp/pg+83orG4/F15zb+jj54QQgghRN3iQ2yCR8IL4BWQleDV
-        8GqYmS+g044PrSbcHNqOWBBajVoUikfPD0tP6xNSXTcKv0vga/BWeAU8HRbBDa6zai/DUo7guzm7OnxR
-        gq/ZGtoODr7iSrnbBMdZeWU1+JzoMbcJYysCtwfjYy42Oy76nm0c/iAMH3xzyaowj01OCr655H38N/Bh
-        W8FXCCGEEF98LMRuwjPgu5BV3xs4lgm9VX1Cy9svDm1Hzw1FoxaGQsiq7wnDZ4VX+h4cb3lYBlnlXQ73
-        jsY2kNXed7qsr/YyLG3F4LupVofaBl/ufLC5wZfyRDeGQC5W8z2x7Ju144y5iM0qwNaru8A9trBpbREm
-        gy9bETjHPYUZkpNsB3mt9Rr74MtFeEn3UN5XAn1Lib0WtqHwsAwb91qrg4KvEEIIIfIDQ+wmPB/6dofh
-        EOP9wq4Vp4XiMbNDycgFmdBrhmuXhJFXTgrvdi/OhNko2LLiay0OK+E+cMPg26EwzI2qvXQrBV/2+HIX
-        iKQ5M1ePL9sT/LiXOxjUJvheBxkC2abAnlw/Z+0EXMTGfXt5EAYDJ+dY+eUc+31t14hjoL+flVjr8eUu
-        F34ul6z8so2C98W3K9uUFny5X7Bf9OYdDXmNgq8QQggh8sP6EJvVg+Fa6INv36aVA9b39Y69L7Qb8dgG
-        odeH33svuNS3PPwUWvClz8DG8LPg26UoLBt8SDjswP0zYWkrBV/2p7K1IGmOcpEYF5DFD45gD22uEMiq
-        J1sS4jtGdIIMy3xeP27y9DLb2ovbkGVOM3NaQOT2auzB5c4LVpXtBznHU9SegWxpiC8mY0sEWxh4Hffw
-        9XO5ZA8yXw/vS9oGLZcWfGm2PxTsYIuXoo+eEEIIIUTdgiCbzQbwIehD71uweZNpvcMe4ydk+nqTQi9t
-        MXpRpu1hwZATLfx+B/rgS9nrWxN8aerIojDz9PJMWMoSfNkKwN5aH6py+T3IwJWt+mlbe7GC6sfZY8uF
-        aGwv8OOU7QkMpAy+i6Ixyp0mLHQugTwy+FuQ4ZYHQXCBGivQnKdsRfDPSw+BnLMtyfzvytYEVokZ/lnV
-        5XP5e83bIe/ldewF9nPcvqwj5BZoR0Vj5k2Q9/FnsMXDb7nG1oYjYRWMv5c++LLdgdu42TZp3NWCvyfb
-        Ojg/JfroCSGEEELULQiy2dwX+tCbLqgcNJmht+XEa0LxyIXW19sc9oBD4WXwQjgA7s7g223EnPDygCND
-        qlthIwTbFdAHX25vtgPcKPyOPrlXtuDLYMWeXG7JxepiXAY2VmMtlDGALYYMXTxa99uQp6gdCHk874uQ
-        e+T+Bto95lWQ9zEkHhHJiixDKaup7MF9Ftr1/G9+vjYLgZT//f83aAvazOkw6VANbsv2b2jX+R5jhs/n
-        oM2xb9bfa/J1MJjbddylgRXX+ZCvxcbjxzSzz5e/j82zqjwHssLM98mP+9PlLPgyMNs1fE95UIbtP0y5
-        LVub6KMnhBBCCFG3INBmcwT0oTdVUNV3r+Z3DA0l1z3C4FuAcDsS/hOmE3wHDg/XLml8ydVV4c2epSHV
-        vag3gq0PvvQYuGHwLS8Kr/TZO1vw5WETPLyCgTJJLuxiALZQRltAf4wwq8a8lieRsSeWbQ7+FDOT4Y7h
-        2O6jbIs4F3L+Fmhbj/l7BkEGaYZ0fy97hhlceYRxtlYIyu3aGK5ZUfZHEdPJkHP8HQ6OxpLk78W9gm2h
-        m5cBlJXbpPvZ4sHT7lgtjt/3JmRg7wb9ThIWfLlLxWmQ74m/j33KrE7zj47okyeEEEIIUcdEITcu2xwe
-        hy749j+n6dTBofCGmWxxKEGofdKFXPNp+ElsbB7C784/vnzc+sVuxxSPQ7j1wXciw27c1BFZT27jIRXN
-        IRdjJclqbvwQC5PHBR8Ny6HfTYE7ETAc+2u93MmAbQqsEvO/7m2cPy/b9l2UC+QOh2w36A4Z/PyhFdlk
-        ny5fK0NofI4tE5xjVTdXeDbZHsGfzTDeC+4Pd4ZJ13r3gF0h7zseHgT5vidda8GXYZmvnS0SfK/Yk8x7
-        28Oa64UQQggh8gJCbZIt4CoYBd8Bt3MxW+ub7+Fitt0RZl+KhVu6FvaEG1WA24xaOAfhd9vKi4aFVHmm
-        37cSWvBdyKAbN9WjJFvwlV88ffDN9YdARiGEEEKIvBAF3bh7w3WQwffnTab1bth6/ATbwWFGPNhGjoWc
-        n+DGamw1atFQ7vTwu3OG2GK3GyGD76twO4bduAq+9UYFXyGEEEJ88YmCbtyjIPt67y6o6rNty0lXhZKR
-        j3ExW9ekUAt/A7eHDL7NYDWMX/OvXUYvarbvqLnhucHlVvkdAFnxbWph16vgW2+8FDL4sm86qT1jA4UQ
-        Qggh8kIs8Jpd4ES2NzSrODUUjXnIDqm4LxZm6T1wB8h5sxVcCuPXDuZODz+45u7w1rFl7PdlwOWuDqr4
-        1m+5bRtPfXsJcmeIpGtqFEIIIYTIC7HAazZqOnVgaFJ1Qmg9bpq1ODDMvu9C7NvwXOgDr3cnOAWug3bP
-        HJg53GLqRcNDqkvN4RaJJgVfWf8VQgghhMgLCaE3Y0FVn9Bi4jB/HPF3o/D6AayEbaAPutnsCOdB3ssd
-        H1q0GrUo7DR6YVh05kB/sttGJoUmWf8VQgghhMgLSaGXRxI3rTgpFN4wO3NQBcIqZXWXgZdbmflg+3nt
-        BmfD/fiYLQ/9hs8Mr/U5wFoeFHy/IgohhBBCCCGEEEIIIYQQSYTwPyuM83EzU9iEAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAr4AAAAoCAYAAAAYJ/kCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAA59SURBVHhe7Z13kN1VGYapoUgLXUCJkFACRGoA6SACQxsUBAELCCOg9KYoZRwVBGmKIE2kSVNp
+        ggIKjCCIgCBNBSyhSe9FSojvs/6+9duz597dTda9WXyfzDObPeW3d2/2j3dPvnPONMYYY4wxxhhjjDHG
+        mIbx41efUneRqxdtu8qxRduAnTRpkn0PaowxxhjTEWqBcwAuIV+X+6U2vEXeLKdLbQO2Fprs8NcYY4wx
+        piPUAucAvEJOkhentnnlc5L2HZq2ybIWmuzw1xhjjDGmI9QCZz9dVxJu8R9yFkn7Bk0bTpBzyHJuv6yF
+        Jjv8NcYYY4zpCLXA2U9Z5Y2A+7ZcUtK+b9MWbi/Luf2yFprs8NcYY4wxpiPUAmc/HCWp7c0BlxVg+o5O
+        bfgrOa0sn9GntdBkh7/GGGOMMR2hFjj74bYyh1vcWNJ3QmrDl+QCsnxGn9ZCkx3+GmOMMcZ0hFrg7IcH
+        yhxucT1J33dSG74rl5flM/q0Fprs8NcYY4wxpiPUAmc/PFzmcPumHC3p27Npy64qy2f0aS002eGvMcYY
+        Y0xHqAXOfri/zMH2Djm9pG85+Y6MPlZ8x8nyGX1aC012+GuMMcYY0xFS0CS4LiV3kyfLy+QNjZfK4+Vm
+        kksp1pc5+O4j4zlsZLteRt9TckY5n+RGt9PlVfJGeZ28SB4jt5bUAndvhKuFpsUXHfU1eYI8uY0rS8b2
+        1yvkD4u2KXVm+Vl5nrxJ3iavlqfKT8p5ZG3ee15jjDHGmI7QhMwZZFmb20puZWNz233N5/fIuWQ8C9eW
+        rPTSf5rcSz7WfN7OF+Wmsus5LYLvK/Id+Wf5l4oPys1lr8DVxnvktUXblDhK3iontfExubGszX9Pa4wx
+        xhjTESJkykXkKbIWSEvfkE9ILq5YRubnhFHr+2DzsS+flXvImWXXM1oE35ckq6i9AtUUeIe8qmibXEfI
+        38gIuJfLL8rPy6/Ka+TLkr61ZO0Z72mNMcYYYzrC+FVW+4//DazcvHaNrIXTLCUQY2SeW0r5AgG5Nj98
+        VX5PLi57zB+mwXdtGaH3yKatdHH5KTldavu/0RhjjDGmI6yi0IuVAMyFFEdJShsIr89JVm/PlwRaan3z
+        +FZSt7u3pJ73Uclz/i6p86U2OG5862Wb4Ht+DlIDdC45b9F2pxys4HuQJPS+JRdr2jrtgnJROXdq64/z
+        Sco2+Fjrb+e0cpHG6Zu2Lo0xxhhjOoJC74gIv21C8BxybjlTapscZ5c8Z9bU1soRgxx8d5FsMKNG+A15
+        v/yWnE3eItl4lsez+ezXcpPUVnqgPKNo20cSfKlDXrVp60uC+KXyl7JW93uopAZ5u9QWstnvOrl/agt3
+        lZRdvCrfls9IAj6rzeXY7DaSkowXJPNelLwXbNarjd9C8vq+K2eSX5KsovN1eb/vlpR5zCKbnzxjjDHG
+        mCFGQfcAeYe8Vl4iT5J7yhVkLQQPprPJDeVh8kx5uaSE4ja5+iAGX06BIIxeJHeSW8v9JJvabpdslKMW
+        N89hpZI5u6W20gvkQ0UbJ0owD2+WC8ncX5O64EckczhhIvfNIZ+V9F3ftIUzygmSPlaao50V1rNlvI7X
+        5RPpczxO5mchq7ScOhFjCL3M42O0/UjOIPO8gyV9j8qfN3+vSZietfnRM8YYY4wZWhRu55d3y0mFE+XN
+        8gtyOjmYAXgheax8WNbqfr8tp20RfNkYRqjLwaudUXPL6mzZR0A8V9JPKM59C8t3JZvScnuWEEh4zm3U
+        7f5YRtgjmO4ly/KK0tMk4wnSBNpoX1HGswjHs8roW0ZSUsHrXLZpQ8J6zDlaUubAyvby8mcy+srTL3aQ
+        0XeWXFIyj4+sbEcfK7p53r4y+pDwzrNZ8Wb1OG/2O6j50TPGGGOMGVoItHJBWQu/IavBH5Q9SyFK6yG3
+        lLOAJ8ha4MUTZdfYFsGX1U+C1JZyq8KPS2pScyg7XTKnXKUM55SsIl+W2nBygy/OLi+WOQyyGvpNWb6+
+        cEfJuDfl2KYNc6icKFeT0UfpAe0c48a5wbTxfVKzTPtPm7Yswfz3kn5CcLSz2ssKNe2sguc54Q2Sfp6f
+        38/8Gs9p2rK8H3+S9N/d/OgZY4wxxgwtEWabYEvJQy344p1yXpnndNvP4Lue5Ci0WuBFLs7oHt8i+BIg
+        WeWk/pTa0ywBllKGHLr47/XfFW2ld8lyc9uUBN/wM/IBGaEQn5eHyB4bvuRoSe0xY1h5jfZLmra/Nh9z
+        6cUPmrZ8+QYlGq/J8jnZ2ID3sIzATDiNcogvN22llIfQz/P5OtEewZeSiBzas8dKxjzR/OgZY4wxxgwt
+        RYAdKS+QteCLZ8lyTpf9CL5ccvGIrAVejjQ7QHaPH7vE2FbBl4BLGKT2ldXaLCc2UC+bAxcbvwi/ua2U
+        Fc7/RfBFShN2ln+QBL/wJ5KNYDGOlVieRR8hkbb3ycclgfRESR9lFPSxQhvjWS2O54yRrBrT3uqCDH45
+        oP9pGSc9cHIDoZz2Vt8zm+Lo/5ckqEd7BF9+8VigaSs9XDLmqeZHzxhjjDFmaKmFWLmjvFWWwfdNuaLs
+        NSeH1hYeKsvA+5q8WK4ke4yfTn9aBF/CFXW5ZbBqJacN9HUrW+0c38EKviF1uwRgVqwJgHiEzGO+L2nn
+        9Ak+H5c+X6/5OyczEIjZNMfKK6us+di0vHJM6cKFkvrlkA15EcIpAcnB9zlJO6UMjCvn8QsC/ay4cxZx
+        fM0cfN/ftJXyvTLmyeZHzxhjjDFmaKmF2OQacm95sGQl+FV5iOwxrp9lDrdKzvE9Xh4sd5KjZa+xrPZC
+        m+A7kFMdppbgG35QxgkOecUVOW2CdlZeWQ3evfmcY8IoReB4MD5ns9lmzd8p48gXYeTg205Whbk2uRZ8
+        28k8/g1y2HbwNcYYY8zUTxliW7izfF6y6ntk09blADa13SlZ5b1HLtu09VbPY7UXBjH49lXqMLnBl5MP
+        Bhp8kRvdCIFsVss1sdTNxnXGbGKLFeCo1b0pfR5hM8oiQoIvpQj0caYwIbnmUpKxUWucgy+b8GpzkHlL
+        yFxSEq+FMhQuy4j2bJQ6OPgaY4wxpjPkENtCzvTN5Q6Hye7+anity4pvlDhwe9s42Wvc0mOWbl7ZoAVf
+        anw5BaLWF7ar8aU8IbdnOcFgcoLvNyQhkDIFanJzX5QTsImNc3u5CIPASR8rv/RR7xunRmwk83xWYqPG
+        l1Mucl87WfmljIJ55XFlfRnBl/OC86a37NclYxx8jTHGGNMZcoituIp8S+bgu5Xs6q8F1zaeLSP44r1y
+        Ztlj3Lix45pXNmjBl/pUSgtqfcgmMTaQlRdHUEPbLgSy6klJQnlixLqSsMxzc3vI7WVxtBfHkHXdZpaM
+        gMjxatTgcvJCrMp+QtLHLWr3Skoays1klERQwsA4zvDNfe2kBpnXw7zaMWjtjOCLrX5RiIstHmr+eY0x
+        xhhjhpYIsRW5tOIXMofep+U8ciAlDuHmMgdfpNa319gxo0Z3vbYWwZdSAGpry2DVyk9LAler1c842osV
+        1NxOjS0b0SgvyO1IeQKBlOD726YNOWkiQuetkiuDPyQJt1wEwQY1VqDpR0oR8nNxvKQvjiTL3yulCawS
+        E/5Z1eVZeW54imQu46gFzn0cX7aO5Ai0NZu28BjJPL4GJR75yDVKG9aQZ8ryvczBl3IHjnGLY9I41YLv
+        k7IO+k/t+sc1xhhjjBlqCLEt/LDMoRdPlmXonUduLHeTB8p95DaS29nyuBHyAZmDL8ebzSLzuC5Hzjay
+        VfAlWFGTy5FcrC6WEthYjY1QRgC7RRK6uFp3OcktaitJrud9UHJG7pUy5oRfkcwjJH6kkRVZQimrqdTg
+        3idjPP/Nz2uLEIj89//fZGxoC8+TtUs1OJbtSRnjco0x4fN+GX3Uzea5Ia+DYB7jOKWBFdcbJa8l2str
+        mqnz5fuJflaVr5asMPM+5fZ8u1wEXwJzjOE95aKMOH8YOZZtVPOjZ4wxxhgztBBkW3i4zKH3BbmYjHA6
+        hzxCPi5zmA2flYfJXM6wpSzHbSSjv9uVVli5VfDlsgkuryBQ1mRjFwE4QhnOL/M1wqwaM5abyKiJpcwh
+        32IWEu4IxzEPKYvYQ9J/nIyjx/KcbSVBmpCe51IzTHDlCuNWpRDIcW2Ea1aU81XEeLKkj+9hlaatJt8X
+        ZwXHRrcsAZSV29p8Sjy47Y7V4nLeU5LAvqHMJ0lE8OWUis9J3pM8jzplVqf5paP5yTPGGGOMGWIIshUp
+        c7hN5uC7u4xguoS8S5Yh9o/y7aLtBjlSxtxjZe4/SUZfD1sEXy6pmEeyGasmq7nlJRYh1wWvJT8q82kK
+        nERAOM5js5xkQJkCq8T813208/VaHd+FbJBbXVJu8DFJ8MuXVrSSOl1eKyG07KNkgj5WdduF55DyCL42
+        YXxTuYIcKWtjsx+QG0jmbSFXlrzvtbERfAnLvHZKJHivqElm7jKye7wxxhhjTEcgzFacX74oI/SeIiOQ
+        UsLwkMzhFd+Sm8jaCvDVcgYZzzhDRt/NTVsvWwRfO/WZg2+7XwS6NMYYY4zpCATaisvKiZLQe6GcPtX1
+        ctNaDrXh0ZL+E1Nblhrg7lArj5K0T5AzNm09dPAdNjr4GmOMMWbqR6G25pqS0HuOnCGF3g1kGWjxSjmT
+        ZMxc8g5ZjvmnpK872Eo2wbHiO2dq69bBd9h4gCT4UjddK8/ooTHGGGNMR2iCbun68qT4PIXRC2QZaM+V
+        5ckMC8vbZTl2e5nHIXO94ju85dg2bn17SHIyRG1Mt8YYY4wxHSHCbeGI+HsKooTZl2WE2GfkHjKPyc4m
+        T5UTZcyh1rc2tmot+NrhrzHGGGNMR0hht5fFeb3bScLrK5LNaaNk7m/lOpKTHZjLiQ/zy9q4XtZCkx3+
+        GmOMMcZ0hFrgDYsgyuougZejzMq+/rihvEoun9raWgtNdvhrjDHGGGOMMcYYY4wxxtSYZpp/A/jkG3ob
+        I7TDAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
